--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/twitter.ht
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: fdammassa
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
@@ -68,7 +68,7 @@ twitter_user: fdammassa
 twitter_tweet_count: 4
 twitter_show_replies: false
 twitter_follow_button: true
-twitter_show_follower_count: false
+twitter_show_follower_count: true
 twitter_tweet_button: true
 
 # Google +1
@@ -89,8 +89,8 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name: fabriziodammassa-blog
+disqus_show_comment_count: true
 
 # Google Analytics
 google_analytics_tracking_id:
